add final benchmark result
+ put first uberjar execution in correct chronological order