@@ -3,7 +3,9 @@
 
 (defproject java-after-eight-clj "0.1.0-SNAPSHOT"
   :global-vars {*warn-on-reflection* true}
-  :javac-options ["-target" "12" "-source" "12"]
+  :javac-options ["--enable-preview" "-target" "14" "-source" "14"]
+  :java-cmd "G:/software/Java/jdk-14-early-access/bin/java"
+  :jvm-opts ["--enable-preview"]
   :dependencies [[org.clojure/clojure "1.10.1"]]
   :source-paths ["Clojure port/src"]
   :java-source-paths ["genealogy/src/main/java" "genealogists/src/main/java"]
